[gd_scene load_steps=2 format=2]

[ext_resource path="res://scenes/GameUI/DebugWeather/DebugWeather.gd" type="Script" id=1]

[node name="DebugWeather" type="PanelContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -846.0
margin_bottom = -556.0
script = ExtResource( 1 )

[node name="Rows" type="VBoxContainer" parent="."]
margin_left = 7.0
margin_top = 7.0
margin_right = 427.0
margin_bottom = 177.0
custom_constants/separation = 10

[node name="Day Progress" type="Label" parent="Rows"]
margin_right = 420.0
margin_bottom = 14.0
text = "Day Progress"

[node name="DaySlider" type="HBoxContainer" parent="Rows"]
editor/display_folded = true
margin_top = 24.0
margin_right = 420.0
margin_bottom = 40.0

[node name="Label" type="Label" parent="Rows/DaySlider"]
margin_top = 1.0
margin_right = 29.0
margin_bottom = 15.0
text = "Start"

[node name="DaySlider" type="HSlider" parent="Rows/DaySlider"]
margin_left = 33.0
margin_right = 393.0
margin_bottom = 16.0
size_flags_horizontal = 3
value = 50.0
ticks_on_borders = false

[node name="Label2" type="Label" parent="Rows/DaySlider"]
margin_left = 397.0
margin_top = 1.0
margin_right = 420.0
margin_bottom = 15.0
text = "End"

[node name="Brightness" type="Label" parent="Rows"]
margin_top = 50.0
margin_right = 420.0
margin_bottom = 64.0
text = "Brigthness"

[node name="BrigthnessSlider" type="HBoxContainer" parent="Rows"]
editor/display_folded = true
margin_top = 74.0
margin_right = 420.0
margin_bottom = 90.0

[node name="Label" type="Label" parent="Rows/BrigthnessSlider"]
margin_top = 1.0
margin_right = 29.0
margin_bottom = 15.0
text = "Dark"

[node name="BrightnessSlider" type="HSlider" parent="Rows/BrigthnessSlider"]
margin_left = 33.0
margin_right = 378.0
margin_bottom = 16.0
size_flags_horizontal = 3
value = 50.0
ticks_on_borders = false

[node name="Label2" type="Label" parent="Rows/BrigthnessSlider"]
margin_left = 382.0
margin_top = 1.0
margin_right = 420.0
margin_bottom = 15.0
text = "Bright"

[node name="Weather2" type="Label" parent="Rows"]
margin_top = 100.0
margin_right = 420.0
margin_bottom = 114.0
text = "Weather"

[node name="Weather" type="HBoxContainer" parent="Rows"]
margin_top = 124.0
margin_right = 420.0
margin_bottom = 140.0

[node name="Label" type="Label" parent="Rows/Weather"]
margin_top = 1.0
margin_right = 34.0
margin_bottom = 15.0
text = "Rainy"

[node name="WeatherSlider" type="HSlider" parent="Rows/Weather"]
margin_left = 38.0
margin_right = 378.0
margin_bottom = 16.0
size_flags_horizontal = 3
value = 100.0
ticks_on_borders = false

[node name="Label2" type="Label" parent="Rows/Weather"]
margin_left = 382.0
margin_top = 1.0
margin_right = 420.0
margin_bottom = 15.0
text = "Sunny"

[node name="ResetButton" type="Button" parent="Rows"]
margin_top = 150.0
margin_right = 420.0
margin_bottom = 170.0
text = "Reset"
[connection signal="value_changed" from="Rows/DaySlider/DaySlider" to="." method="_on_DaySlider_value_changed"]
[connection signal="value_changed" from="Rows/BrigthnessSlider/BrightnessSlider" to="." method="_on_BrightnessSlider_value_changed"]
[connection signal="value_changed" from="Rows/Weather/WeatherSlider" to="." method="_on_WeatherSlider_value_changed"]
[connection signal="pressed" from="Rows/ResetButton" to="." method="_on_ResetButton_pressed"]
